Fix read checkbox scaling on mobile and rename submit button

--- a/style.css
+++ b/style.css
@@ -262,6 +262,10 @@ a:visited {
 	text-shadow: 0 2px 3px rgba(0, 0, 0, 0.068);
 }
 
+#read {
+	width: min-content;
+}
+
 /* Edit form */
 .edit-card>h1 {
 	margin-bottom: 0;
